sent for Yuval and Jelles review

--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -893,8 +893,7 @@ From Figure~\ref{fig:file12}, we see that also for the mixture class of \cite{go
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.5\linewidth]{"art/file12"}
-	  \caption{TODO JDR: update plot after filtering statistics and adding Goeman.
-	  	\textbf{Mixture Alternatives.} $\x_i$ is distributed as in Eq.(\ref{eq:mixture_alternative}). 
+	  \caption{\textbf{Mixture Alternatives.} $\x_i$ is distributed as in Eq.(\ref{eq:mixture_alternative}). 
 	  	$\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
 	  The effect, $\pi$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:file12}
